--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
       "icon": "inbox-check.png"
     },
     {
+      "name": "backfill-asana-data",
+      "title": "Backfill Asana Data",
+      "description": "Intelligently backfill missing NPID data in old Asana tasks",
+      "mode": "view",
+      "icon": "id-tasks.png"
+    },
+    {
       "name": "email-student-athletes",
       "title": "Email Student Athletes",
       "description": "Send templated emails to student athletes using Selenium automation",
@@ -43,16 +50,14 @@
       "title": "NPID XSRF Token",
       "description": "XSRF token for NPID authentication (from browser session)",
       "type": "password",
-      "required": false,
-      "default": "eyJpdiI6Inpnb3RqNVF4bUE1bG12Q25Xb0NTTWc9PSIsInZhbHVlIjoicEtHKzZcL252RER0aW1WZGFjVktJeEhnZG9MZDB1ZTNVcVZmQ1R1ZGkxdEd3aFFrWUpmM2JMMnNLMW9ZeVhaU1NMQmxHWlRZOG9OSmxQZk9QXC9xQ0swUT09IiwibWFjIjoiYjlmM2U5Y2E1OTZmYzI1MjhkZGE3N2FiMmI4MmVhY2I5ZThlMjNmNmJjYjAzN2E0OGE3OWI0MTBhNzUyMjI3YiJ9"
+      "required": false
     },
     {
       "name": "npidSession",
       "title": "NPID Session Cookie", 
       "description": "Session cookie for NPID authentication",
       "type": "password",
-      "required": false,
-      "default": "eyJpdiI6InBWN2kwaWlENzhRVENodlpPZGpcLytBPT0iLCJ2YWx1ZSI6IkxoaktBSnNzd08yaG95bWU0d1hRSk5oQ0RsdEFpZ1hzYWh0Q2EzcHdzQ3c3WUFUbUd5ekhNNk5DaWwrWWJxSnl0SmhIVGxRV2I2bHBISUl0MjhmR0FnPT0iLCJtYWMiOiI5YjZlZjU2NzQ3NTNjYzg5MTZmYTg0YTRjNzJiMDk5YTllZmRlNDA0ZjMwM2E1M2U0NGQzNzkyM2FkNGI0Y2M0In0%3D"
+      "required": false
     },
     {
       "name": "npidBaseUrl",
@@ -63,12 +68,25 @@
       "default": "https://dashboard.nationalpid.com"
     },
     {
+      "name": "npidEmail",
+      "title": "NPID Email",
+      "description": "Your NPID login email for automatic token refresh",
+      "type": "textfield",
+      "required": false
+    },
+    {
+      "name": "npidPassword",
+      "title": "NPID Password",
+      "description": "Your NPID login password for automatic token refresh",
+      "type": "password",
+      "required": false
+    },
+    {
       "name": "asanaAccessToken",
       "title": "Asana Personal Access Token",
       "description": "Your Asana Personal Access Token for API access",
       "type": "password",
-      "required": true,
-      "default": "2/1207648487940496/1208773397586807:92fc81ba3a6cb7e24cab8880173852ec"
+      "required": true
     }
   ],
   "dependencies": {
