--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "scout-singleton",
   "title": "Scout Singleton",
+  "type": "module",
   "description": "Student-athlete video workflow (Asana + NPID + Selenium)",
-  "icon": "video.png",
-  "author": "singleton23",
-  "categories": ["Productivity", "Developer Tools"],
+  "icon": "video-updates.png",
+  "author": "23Maestro",
+  "categories": [
+    "Productivity",
+    "Developer Tools"
+  ],
   "license": "MIT",
   "commands": [
     {
@@ -54,7 +58,7 @@
     },
     {
       "name": "npidSession",
-      "title": "NPID Session Cookie", 
+      "title": "NPID Session Cookie",
       "description": "Session cookie for NPID authentication",
       "type": "password",
       "required": false
@@ -90,21 +94,22 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.95.0",
-    "@raycast/utils": "^1.19.1",
+    "@raycast/api": "^1.103.2",
+    "@raycast/utils": "^2.2.1",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
-    "node-html-markdown": "^1.3.0"
+    "node-html-markdown": "^1.3.0",
+    "typescript-eslint": "^8.44.1"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^2.0.4",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "^4.17.20",
     "@types/node": "22.13.10",
-    "@types/react": "19.0.10",
-    "eslint": "^9.22.0",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2"
+    "@types/react": "19.1.13",
+    "eslint": "^9.36.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
   },
   "scripts": {
     "build": "ray build",
