fix: resolve CI build issues
- Revert author to singleton23 (valid Raycast user)
- Move Python file to scripts directory
- Fix TypeScript formatting issues
- Add typescript-eslint dependency

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "description": "Student-athlete video workflow (Asana + NPID + Selenium)",
   "icon": "video-updates.png",
-  "author": "23Maestro",
+  "author": "singleton23",
   "categories": [
     "Productivity",
     "Developer Tools"
