--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
-name: CI
+name: CI (Disabled)
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-  workflow_dispatch:
+  # Disabled - using ci-custom.yml instead
+  # push:
+  #   branches: [ main, master ]
+  # pull_request:
+  # workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,5 +15,5 @@ jobs:
           node-version: "22.16.0"
           cache: npm
       - run: npm ci
-      - run: npm run lint --if-present
+      - run: npm run lint-ci --if-present
       - run: npm run build --if-present
