--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "description": "Student-athlete video workflow (Asana + NPID + Selenium)",
   "icon": "video-updates.png",
-  "author": "singleton23",
+  "author": "23Maestro",
   "categories": [
     "Productivity",
     "Developer Tools"
@@ -115,6 +115,7 @@
     "build": "ray build",
     "dev": "ray develop",
     "fix-lint": "ray lint --fix",
-    "lint": "ray lint"
+    "lint": "ray lint",
+    "lint-ci": "ray lint --relaxed"
   }
 }
