fix: resolve NPID API authentication and HTML parsing issues
- Fix NPID API headers to match working curl command format
- Remove hardcoded 'AI slop' values and mapNPIDStatus function
- Disable VIDEO PROGRESS system endpoints causing Unauthorized errors
- Add debug logging for assignment filtering in inbox commands
- Update token refresh scripts with .cjs extensions for Node.js compatibility
- Separate INBOX (HTML parsing) vs VIDEO PROGRESS (database) systems
- Fix HTML parsing selectors for assign_video_team elements

--- a/npid-mcp-server/Dockerfile
+++ b/npid-mcp-server/Dockerfile
@@ -22,6 +22,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the server code
 COPY npid_server.py .
+COPY token_manager.py .
+
+# Directory for persisted auth tokens
+RUN mkdir -p /app/state
 
 # Create non-root user
 RUN useradd -m -u 1000 mcpuser && \
