📋 Added reliable token refresh system
✅ TOKEN-REFRESH-GUIDE.md: Complete manual refresh guide that always works
✅ scripts/simple-token-refresh.cjs: Alternative automated script
✅ package.json: Added npm run refresh-tokens-simple command

Manual method is 100% reliable when automation fails.
Current tokens expire Sept 26 at 5:24 AM (90 minutes from refresh).

--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "lint-ci": "ray lint --relaxed",
     "refresh-tokens-from-har": "node scripts/refresh-tokens-from-har.cjs",
     "extract-npid-tokens": "node scripts/extract-npid-tokens-from-har.cjs",
-    "refresh-npid-session": "node scripts/refresh-npid-session.cjs"
+    "refresh-npid-session": "node scripts/refresh-npid-session.cjs",
+    "refresh-tokens-simple": "node scripts/simple-token-refresh.cjs"
   }
 }
