feat: prepare for Playwright migration - fix token paths and add migration plan
- Fixed all hardcoded /app/state/npid_tokens.json paths to use correct host path
- Updated docker-compose.yml and documentation with correct paths
- Added Playwright to requirements.txt and Dockerfile
- Created comprehensive Playwright migration plan
- Cleaned up unused token refresh scripts
- Prepared for complete token management system replacement

This commit prepares the codebase for replacing the fragile token-based
authentication system with robust Playwright browser automation while
maintaining the same MCP interface and functionality.

--- a/npid-mcp-server/Dockerfile
+++ b/npid-mcp-server/Dockerfile
@@ -20,6 +20,9 @@ COPY requirements.txt .
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Install Playwright browsers and dependencies
+RUN playwright install --with-deps chromium
+
 # Copy the server code
 COPY npid_server.py .
 COPY token_manager.py .
