--- a/scout-mcp-servers/docker-compose.yml
+++ b/scout-mcp-servers/docker-compose.yml
@@ -31,9 +31,9 @@ services:
       - NPID_BASE_URL=${NPID_BASE_URL:-https://dashboard.nationalpid.com}
       - NPID_REFRESH_INTERVAL_MINUTES=${NPID_REFRESH_INTERVAL_MINUTES:-90}
       - NPID_KEEPALIVE_INTERVAL_MINUTES=${NPID_KEEPALIVE_INTERVAL_MINUTES:-20}
-      - NPID_TOKEN_PATH=/app/state/npid_tokens.json
+      - NPID_TOKEN_PATH=/Users/singleton23/Raycast/scout-singleton/state/npid_tokens.json
     volumes:
-      - ../state:/app/state
+      - /Users/singleton23/Raycast/scout-singleton/state:/app/state
     restart: unless-stopped
     networks:
       - mcp-network
